native send result table css overflow fix

--- a/react/src/components/overrides.scss
+++ b/react/src/components/overrides.scss
@@ -414,3 +414,7 @@ button,
   overflow-y: auto;
   max-height: 300px;
 }
+
+.overflow-x {
+  overflow-x: auto;
+}
